day_6/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
   name: solar-system
spec:
  selector:
    app: solar-system
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    type: LoadBalancer
