day_6/k8s/ingress.yaml
# yaml-language-server: $schema=kubernetes
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: solar-system-ingress
  namespace: default
  labels:
    app: solar-system
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - app.example.com
    secretName: app.example.com-tls
  rules:
  - host: app.example.com
    http:
      paths:
      - path: /test
        pathType: Prefix
        backend:
          service:
            name: solar-system
            port:
              number: 3000
